<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YeLink</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_id">账号</string>
    <string name="user_passwd">密码</string>
    <string name="login_warning">账号或者密码不能为空</string>
	<string name="login_error_net">登陆超时或网络出错，请检测网络状态后重试。</string>
	<string name="login_failure">用户名或密码错误</string>
	<string name="exit_toast">再按一次返回键退出</string>
	<string name="my_yeelink">我的Yeelink</string>
	<string name="login_yeelink">登陆Yeelink</string>
	<string name="none_currentUser">请先登录</string>
	<string name="about">关于</string>
	<string name="login">登录</string>
	<string name="logout">注销</string>
	<string name="APIkey_notcorrect">APIKEY不正确</string>
	<string name="nodataonlist">暂无数据</string>
	
</resources>
